# ezgl

./: .clang-format  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  HelloWorld.cpp
include/Camera/ez/: Camera.h  Camera.tcc  CameraControllerFly.h  CameraControllerFly.tcc  OrthographicCamera.h  OrthographicParameters.h  PerspectiveCamera.h  PerspectiveCamera.tcc  PerspectiveParameters.h
include/Camera/ezgl/: Camera.h  Camera.tcc  CameraControllerFly.h  CameraControllerFly.tcc  OrthographicCamera.h  OrthographicParameters.h  PerspectiveCamera.h  PerspectiveParameters.h
include/Font/ez/: ETextHAlignment.h  ETextVAlignment.h  Font.h
include/GL/ez/: Buffer.h  Buffer.tcc  EBO.h  EBO.tcc  Framebuffer.h  GL.h  GL.tcc  GLBindableObject.h  GLBindableObject.tcc  GLGuard.h  GLObject.h  GLObject.tcc  GLTypeTraits.h  Image2D.h  Image2D.tcc  ImageIO.h  SSBO.h  SSBO.tcc  Shader.h  Shader.tcc  ShaderPreprocessor.h  ShaderProgram.h  ShaderProgram.tcc  ShaderProgramFactory.h  Sync.h  Texture.h  Texture.tcc  Texture2D.h  Texture2D.tcc  Texture3D.h  Texture3D.tcc  TextureFactory.h  TextureOperations.h  UBO.h  UBO.tcc  VAO.h  VAO.tcc  VAOVertexAttrib.h  VBO.h  VBO.tcc
include/GL/ezgl/: Buffer.h  Buffer.tcc  EBO.h  EBO.tcc  Framebuffer.h  GL.h  GL.tcc  GLBindableObject.h  GLBindableObject.tcc  GLGuard.h  GLObject.h  GLObject.tcc  GLTypeTraits.h  Image2D.h  Image2D.tcc  ImageIO.h  Shader.h  Shader.tcc  ShaderProgram.h  ShaderProgram.tcc  ShaderProgramFactory.h  Texture.h  Texture.tcc  Texture2D.h  Texture2D.tcc  TextureFactory.h  TextureOperations.h  UBO.h  UBO.tcc  VAO.h  VAO.tcc  VAOVertexAttrib.h  VBO.h  VBO.tcc
include/Generic/ez/: Chrono.h  FileUtils.h  Macros.h  Range.h  Span.h  StreamOperators.h  StringUtils.h  Time.h  TupleOfStacks.h  TypeTraits.h
include/Generic/ezgl/: Flags.h  Range.h  Span.h  StreamOperators.h  Time.h  VariadicRepeat.h
include/Math/ezgl/: Circle.h  Color.h  Geometry.h  Mat.h  Mat.tcc  Math.h  MathInitializers.h  MathMultiComponent.h  MathRandom.h  MathSwizzling.h  Plane.h  Plane.tcc  Quat.h  Quat.tcc  Rect.h  Rect.tcc  Segment.h  Segment.tcc  Transformation.h  Transformation.tcc  Triangle.h  Vec.h  Vec.tcc
include/Mesh/ez/: Mesh.h  MeshDrawData.h  MeshFactory.h  MeshIO.h  MeshIterators.h
include/Mesh/ezgl/: Mesh.h  MeshDrawData.h  MeshFactory.h  MeshIO.h  MeshIterators.h
include/Renderer/ez/: DirectionalLight.h  DrawableRayTracing.h  DrawableRayTracing.tcc  DrawableRayTracingWrapper.h  Material2D.h  Material3D.h  MaterialRayTracing.h  ObjectRayTracing.h  ObjectRayTracing.tcc  ObjectRayTracingInSpace.h  PointLight.h  RenderTarget.h  Renderer.h  Renderer.tcc  Renderer2D.h  Renderer2D.tcc  Renderer3D.h  Renderer3D.tcc  RendererGPU.h  RendererGPU.tcc  RendererRayTracingCPU.h  RendererRayTracingCPU.tcc  RendererStateGuard.h  RendererStateStacks.h  RendererStateStacks.tcc
include/Renderer/ezgl/: DirectionalLight.h  Material2D.h  Material3D.h  PointLight.h  RenderTarget.h  Renderer.h  Renderer.tcc  Renderer2D.h  Renderer2D.tcc  Renderer3D.h  Renderer3D.tcc  RendererStateStacks.h  RendererStateStacks.tcc
include/SceneGraph/ez/: SceneGraphNode.h  SceneGraphNode.tcc
include/UI/ez/: Input.h  InputListener.h  Window.h  Window.tcc
include/UI/ezgl/: Input.h  Window.h  Window.tcc
res/: 2D.frag  DrawFullScreenTexture.frag  Mesh.frag  OnlyColor.frag  OnlyColor.vert  default.frag  default.vert  mesh.frag  mesh.vert  segment.frag  segment.vert  shaded.frag  shaded.vert
res/Shaders/: 2D.frag  2D.vert  2DText.frag  DrawFullScreenTexture.frag  DrawFullScreenTexture.vert  Mesh.frag  Mesh.vert  OnlyColor.frag  OnlyColor.vert  Text.frag  Text.vert
script/: clang-format-all-files.sh
src/: Buffer.cpp  Buffer.h  Buffer.tcc  Camera.cpp  Camera.h  Camera.tcc  CameraControllerFly.cpp  CameraControllerFly.h  CameraControllerFly.tcc  Color.h  DirectionalLight.h  DrawableMesh.cpp  DrawableMesh.h  EBO.cpp  EBO.h  EBO.tcc  EGLType.h  EShaderType.h  FileUtils.cpp  FileUtils.h  Flags.h  Framebuffer.cpp  Framebuffer.h  GL.cpp  GL.h  GL.tcc  GLBindableObject.h  GLBindableObject.tcc  GLGuard.h  GLObject.h  GLObject.tcc  GLTypeTraits.h  Geometry.h  Image2D.h  Image2D.tcc  ImageIO.cpp  ImageIO.h  Input.h  Light.cpp  Light.h  (+101 more)
src/Font/: Font.cpp
src/GL/: Buffer.cpp  EBO.cpp  Framebuffer.cpp  GL.cpp  ImageIO.cpp  SSBO.cpp  ShaderPreprocessor.cpp  ShaderProgram.cpp  ShaderProgramFactory.cpp  Sync.cpp  Texture2D.cpp  Texture3D.cpp  TextureFactory.cpp  TextureOperations.cpp  UBO.cpp  VAO.cpp  VBO.cpp
src/Generic/: FileUtils.cpp  StreamOperators.cpp  Time.cpp
src/Math/: Geometry.h  MathMultiComponent.h  MathRandom.h  MathSwizzling.h  MathTypeTraits.h  Plane.tcc  Rect.tcc  Segment.h  Segment.tcc  Transformation.h  Triangle.h  Vec.h
src/Mesh/: Mesh.cpp  MeshDrawData.cpp  MeshFactory.cpp  MeshIO.cpp
src/Renderer/: Material2D.cpp  Material3D.cpp  RenderTarget.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  RendererGPU.cpp  RendererRayTracingCPU.cpp
src/UI/: InputListener.cpp  Window.cpp
tests/: CMakeLists.txt
tests/src/: TestAllGeometryCalls.cpp  TestDistanceSegment2D.cpp  TestDistanceSegment3D.cpp  TestGeneric.cpp  TestIntersection2D.cpp  TestIntersection3D.cpp  TestIntersectionRay.cpp  TestIntersectionSegment2D.cpp  TestIntersectionSegment3D.cpp  TestIntersections.cpp  TestOctree.cpp  TestPrimitiveController.h  TestRayIntersection.cpp  TestRayTracingCPU.cpp  TestSegmentController.h  TestText.cpp  test.cpp
